--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,8 @@
 @import './constants/colors';
 @import './constants/typography';
+
 @import './base/fonts';
 @import './base/normalize';
 @import './base/reset.scss';
+
+@import './layouts/grids';
