--- a/styles/constants/_colors.scss
+++ b/styles/constants/_colors.scss
@@ -4,7 +4,7 @@ $primary: #3f4150;
 $secondary: #8c8d96;
 $tertiary: #b2b3b9;
 $border: #e0e2e7;
-$backgroud: #f7f8fa;
+$background: #f7f8fa;
 $white: #fff;
 
 $blue: #3da5f5;
