--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,7 +4,8 @@
 
 @import './base/fonts';
 @import './base/normalize';
-@import './base/reset.scss';
+@import './base/reset';
+@import './base/globals';
 
 @import './mixins/text-style';
 @import './mixins/responsive';
