✏️ Fix flexbox al and jc

--- a/styles/mixins/_flexbox.scss
+++ b/styles/mixins/_flexbox.scss
@@ -7,25 +7,25 @@ $flex-map: (
   center: center,
 );
 
-@function _get-flexc-value($key) {
+@function _get-flex-value($key) {
   @return map-get($flex-map, $key);
 }
 
 @mixin flexbox($jc: center, $ai: center) {
   display: flex;
-  align-items: $ai;
-  justify-content: $jc;
+  align-items: _get-flex-value($ai);
+  justify-content: _get-flex-value($jc);
 }
 
 @mixin inline-flexbox($jc: center, $ai: center) {
   display: inline-flex;
-  align-items: $ai;
-  justify-content: $jc;
+  align-items: _get-flex-value($ai);
+  justify-content: _get-flex-value($jc);
 }
 
 @mixin column-flexbox($jc: center, $ai: center) {
   display: flex;
   flex-direction: column;
-  align-items: $ai;
-  justify-content: $jc;
+  align-items: _get-flex-value($ai);
+  justify-content: _get-flex-value($jc);
 }
