--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -39,13 +39,13 @@
 }
 
 .md-hidden {
-  @media screen and (min-width: $md-breakpoint) and (max-width: ($md-breakpoint - 1)) {
+  @media screen and (min-width: $md-breakpoint) and (max-width: ($lg-breakpoint - 1)) {
     display: none !important;
   }
 }
 
 .lg-hidden {
-  @media screen and (min-width: $md-breakpoint) {
+  @media screen and (min-width: $lg-breakpoint) {
     display: none !important;
   }
 }
