--- a/styles/modules/_avatars.scss
+++ b/styles/modules/_avatars.scss
@@ -2,6 +2,10 @@
   display: block;
   overflow: hidden;
   border-radius: 50%;
+  background-image: url('./assets/images/img-user-default.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
 
   img {
     display: block;
