--- a/styles/components/_search-history.scss
+++ b/styles/components/_search-history.scss
@@ -25,6 +25,12 @@
 
   &-item {
     position: relative;
+    border-radius: 2px;
+
+    &:hover {
+      background-color: $background;
+    }
+
     .word-button {
       @include text-style(16, $primary);
       width: 100%;
@@ -42,6 +48,10 @@
       height: $close-button-size;
       font-size: 16px;
       color: $tertiary;
+
+      &:hover {
+        color: $primary;
+      }
     }
   }
 }
