--- a/styles/components/_my-menu.scss
+++ b/styles/components/_my-menu.scss
@@ -4,6 +4,18 @@
 
   position: relative;
 
+  &.is-active {
+    .my-menu-button {
+      border-color: $blue;
+    }
+
+    .my-menu-content {
+      opacity: 1;
+      visibility: visible;
+      transform: translate3d(-50%, 0, 0);
+    }
+  }
+
   &-button {
     width: $button-size;
     height: $button-size;
@@ -16,8 +28,7 @@
     border-radius: 50%;
     transition: border-color 200ms ease-in-out;
 
-    &:hover,
-    &.is-active {
+    &:hover {
       border-color: $blue;
     }
 
@@ -34,6 +45,11 @@
     top: $button-size + $tooltip-size + 8px;
     border-radius: 4px;
     box-shadow: $dropdown-shadow;
+    visibility: hidden;
+    opacity: 0;
+    transform: translate3d(-50%, -10px, 0);
+    transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out,
+      transform 200ms ease-in-out;
 
     &::before,
     &::after {
