--- a/styles/layouts/_gnb.scss
+++ b/styles/layouts/_gnb.scss
@@ -19,6 +19,7 @@
 
   .logo {
     @include pos-center;
+
     a {
       display: block;
     }
@@ -86,10 +87,34 @@
   }
 
   @include responsive(D) {
-    &-right {
+    &-search {
+      position: relative;
+      width: 264px;
+      margin-right: 24px;
+
       .input-group {
-        width: 264px;
-        margin-right: 24px;
+        width: 100%;
+      }
+
+      .search-history {
+        position: absolute;
+        top: calc(100% + 8px);
+        left: 0;
+        display: none;
+        width: 100%;
+        background-color: $white;
+        padding: 16px 8px 8px;
+        border: 1px solid $border;
+        border-radius: 4px;
+        box-shadow: $dropdown-shadow;
+
+        &.is-active {
+          display: block;
+        }
+
+        &-header {
+          padding: 0 8px;
+        }
       }
     }
   }
