✨ Create and apply a no-scrollbar mixin

--- a/styles/layouts/_lnb.scss
+++ b/styles/layouts/_lnb.scss
@@ -3,10 +3,7 @@
   $grid-margin: $sm-margin + $gutter / 2;
 
   overflow-x: auto;
-
-  &::-webkit-scrollbar {
-    display: none;
-  }
+  @include no-scrollbar;
 
   &-list {
     @include inline-flexbox(start);
